<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_to_expire">About to expire</string>
    <string name="accept">Accept</string>
    <string name="accessibility_add_more_contacts">Invite contact</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_close_button">Close Ad</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="accessibility_closed_captions">Show closed captions menu</string>
    <string name="accessibility_collaborator_card">Collaborator</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_collapse_live_chat">Collapse Live Chat</string>
    <string name="accessibility_connections_illustration">Illustration</string>
    <string name="accessibility_decrement_amount">Decrement amount</string>
    <string name="accessibility_describe_as_button">%1$s Button</string>
    <string name="accessibility_dislike_video">Dislike button</string>
    <string name="accessibility_dismiss">Dismiss</string>
    <string name="accessibility_dismiss_button">Remove suggested contact</string>
    <string name="accessibility_dismiss_chat_video">Dismiss video</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_enter_vr_mode">Enter virtual reality mode</string>
    <string name="accessibility_episode_card">Episode</string>
    <string name="accessibility_error_icon">Chat error</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_live_chat">Expand Live Chat</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_flag">Flag video</string>
    <string name="accessibility_go_to_channel">Go to channel</string>
    <string name="accessibility_go_to_video">Go to video</string>
    <string name="accessibility_header_postfix">Heading</string>
    <string name="accessibility_heart_icon">Heart Button</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_incept_button">Open video player</string>
    <string name="accessibility_increment_amount">Increment amount</string>
    <string name="accessibility_info_cards">Show Cards</string>
    <string name="accessibility_invite_more_participants">Add participants</string>
    <string name="accessibility_like_video">Like button</string>
    <string name="accessibility_live_chat_send_button">Send</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_miniplayer">Open mini player</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_movie_card">Movie</string>
    <string name="accessibility_multi_recipient_share_illustration">Illustration</string>
    <string name="accessibility_nerd_stats">Open Stats for Nerds</string>
    <string name="accessibility_new_content_available">New content available</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_notifications_muted">Notifications muted for this chat</string>
    <string name="accessibility_offline_button_cancel">Stop saving</string>
    <string name="accessibility_offline_button_cannot_save">Cannot save</string>
    <string name="accessibility_offline_button_remove_playlist">Remove offline playlist</string>
    <string name="accessibility_offline_button_remove_video">Remove from offline videos</string>
    <string name="accessibility_offline_button_save">Save offline</string>
    <string name="accessibility_offline_button_sync">Sync new videos</string>
    <string name="accessibility_overflow">More options</string>
    <string name="accessibility_overflow_button">More contacts</string>
    <string name="accessibility_pause">Pause video</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_play_in_youtube">Play in YouTube application</string>
    <string name="accessibility_play_spotlight_story">Play spotlight story</string>
    <string name="accessibility_playback_rate">Set Playback Speed</string>
    <string name="accessibility_player">Expand Mini Player</string>
    <string name="accessibility_player_progress_time">%1$s of %2$s</string>
    <string name="accessibility_playlist_card">Playlist</string>
    <string name="accessibility_playlist_collaboration_settings">Go to playlist collaboration settings</string>
    <string name="accessibility_playlist_edit">Edit playlist</string>
    <string name="accessibility_playlist_play_all">Play all</string>
    <string name="accessibility_playlist_private">Private playlist</string>
    <string name="accessibility_playlist_share">Share playlist</string>
    <string name="accessibility_poll_checked_talk_back">Checked</string>
    <string name="accessibility_poll_not_checked_talk_back">Not Checked</string>
    <string name="accessibility_poll_question_talk_back">Poll question: %1$s, %2$d choices</string>
    <string name="accessibility_poll_remove_option">Remove option</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_profile_photo">Profile photo</string>
    <string name="accessibility_profile_photo_camera_icon">Update profile photo</string>
    <string name="accessibility_quality">Show video quality menu</string>
    <string name="accessibility_related_screen">Related videos and playlists</string>
    <string name="accessibility_remove_attached_image">Remove attached image</string>
    <string name="accessibility_remove_attachment">Remove attachment</string>
    <string name="accessibility_remove_from_playlists">Remove from Playlist</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_replay">Replay video</string>
    <string name="accessibility_replies_disabled">Replies disabled</string>
    <string name="accessibility_reply_search_button">Attach video</string>
    <string name="accessibility_resend_conversation_item">Resend item</string>
    <string name="accessibility_rewind">Rewind</string>
    <string name="accessibility_save">Save</string>
    <string name="accessibility_save_to_playlists">Save to Playlists</string>
    <string name="accessibility_scrubbed_preview">Scrubbed preview</string>
    <string name="accessibility_search_edit_suggestion">Edit suggestion %1$s</string>
    <string name="accessibility_selected">Selected</string>
    <string name="accessibility_send_button">Send reply</string>
    <string name="accessibility_send_comment_button">Send comment</string>
    <string name="accessibility_send_share">Share</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_share_panel">Share dialog</string>
    <string name="accessibility_share_target">App</string>
    <string name="accessibility_share_video">Share video</string>
    <string name="accessibility_sharing_options">Sharing options</string>
    <string name="accessibility_show_channels">Show channels</string>
    <string name="accessibility_show_options_menu">Show options menu</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_skip_ad">You can now skip this ad</string>
    <string name="accessibility_toggle_channel_drawer">Toggle channel drawer</string>
    <string name="accessibility_undo_dislike_video">Undo dislike button</string>
    <string name="accessibility_undo_like_video">Undo like button</string>
    <string name="accessibility_user_image">User Image Button</string>
    <string name="accessibility_video_card">Video</string>
    <string name="accessibility_video_reply_button">Attach video to reply</string>
    <string name="accessibility_video_thumbnail">Small video image</string>
    <string name="accessibility_watch_in_youtube">Watch this video in YouTube</string>
    <string name="accessibility_watch_metadata_row">%1$s %2$s</string>
    <string name="accessibility_watch_page">Open video player</string>
    <string name="account">Account</string>
    <string name="account_switcher_accessibility_label">%s. Switch accounts.</string>
    <string name="account_switcher_add_account">Add account</string>
    <string name="account_switcher_error_credentials_byline">Tap to sign in</string>
    <string name="playlist_save">Save playlist</string>
    <string name="playlist_seasons_accessibility_label">Switch seasons</string>
</resources>