<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.youtube.app.ui.PlaylistHeaderActionBarView android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" res-auto:seasonsViewId="@id/seasons" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:res-auto="http://schemas.android.com/apk/res-auto">
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceSubhead" android:textColor="?android:textColorSecondary" android:ellipsize="end" android:gravity="center" android:id="@id/seasons" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:layout_marginRight="20.0dip" android:maxLines="1" android:includeFontPadding="false" android:drawableRight="@drawable/arrow_down_dark" android:drawablePadding="8.0dip" android:contentDescription="@string/playlist_seasons_accessibility_label" android:drawableEnd="@drawable/arrow_down_dark" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/like_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/playlist_add_mtrl_alpha" android:contentDescription="@string/playlist_save" />
    <com.google.android.apps.youtube.app.ui.OfflineArrowView android:id="@id/offline_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/toggle_button_icon" android:background="?selectableItemBackground" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:contentDescription="@null" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/share_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/ic_share_mtrl_alpha" android:contentDescription="@string/accessibility_playlist_share" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/edit_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/ic_edit_mtrl_alpha" android:contentDescription="@string/accessibility_playlist_edit" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/settings_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/ic_settings_grey" android:contentDescription="@null" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/more_actions_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/ic_more_actions" android:contentDescription="@string/accessibility_more_actions_video" />
</com.google.android.apps.youtube.app.ui.PlaylistHeaderActionBarView>